packages/nestjs-trpc/cli/tests/fixtures/invalid/empty-router/empty.router.ts
import { Router } from 'nestjs-trpc';

@Router({ alias: 'empty' })
export class EmptyRouter {
    // No methods - this should still generate an empty router
}
